--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo: #00162E;
+    --cor-de-fundo:#c24072;
+;
     --fundo-senha: #00244D;
     --fundo-texto: #001E40;
     --borda: #0075FF;
