--- a/style.css
+++ b/style.css
@@ -2,11 +2,10 @@
 
 :root {
     --branco: white;
-    --cor-de-fundo:#c24072;
-;
-    --fundo-senha: #00244D;
-    --fundo-texto: #001E40;
-    --borda: #0075FF;
+    --cor-de-fundo: #c24072;
+    --fundo-senha: #2cce75;
+    --fundo-texto: #301163;
+    --borda: #00aeff;
     --roboto: 'Roboto', sans-serif;
     --roboto-mono: 'Roboto Mono', monospace;
 }
